<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TopBar"
        android:text="@string/guide1_welcome" />
    <TextView
        style="@style/normalTextView"
        android:text="@string/your_mobile_guard"
        />


    <TextView
        style="@style/normalTextView"
        android:text="@string/changeSIM"
        android:drawableLeft="@android:drawable/star_big_on" />
    <TextView
        style="@style/normalTextView"
        android:text="@string/GPStrace"
        android:drawableLeft="@android:drawable/star_big_on"/>
    <TextView
        style="@style/normalTextView"
        android:text="@string/destoryData"
        android:drawableLeft="@android:drawable/star_big_on"/>
    <TextView
        style="@style/normalTextView"
        android:text="@string/remoteLock"
        android:drawableLeft="@android:drawable/star_big_on"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setup1"
            android:layout_centerInParent="true"/>
       <Button
           android:id="@+id/next"
           style="@style/nextButton"/>
    </RelativeLayout>

</LinearLayout>
